@@ -31,30 +31,24 @@ class DefaultStyle(Style):
         #Keyword:                   "bold #AA22FF",
         Keyword:                   "bold #008000",
         Keyword.Pseudo:            "nobold",
-        Keyword.Type:              "",
+        Keyword.Type:              "nobold #B00040",
 
         Operator:                  "#666666",
         Operator.Word:             "bold #AA22FF",
 
-        #Name.Builtin:              "#AA22FF",
         Name.Builtin:              "#008000",
-        #Name.Function:             "#00A000",
         Name.Function:             "#0000FF",
         Name.Class:                "bold #0000FF",
         Name.Namespace:            "bold #0000FF",
         Name.Exception:            "bold #D2413A",
-        #Name.Variable:             "#B8860B",
         Name.Variable:             "#19177C",
         Name.Constant:             "#880000",
         Name.Label:                "#A0A000",
         Name.Entity:               "bold #999999",
-        #Name.Attribute:            "#BB4444",
-        #Name.Attribute:            "#705406",
         Name.Attribute:            "#7D9029",
         Name.Tag:                  "bold #008000",
         Name.Decorator:            "#AA22FF",
 
-        #String:                    "#BB4444",
         String:                    "#BA2121",
         String.Doc:                "italic",
         String.Interpol:           "bold #BB6688",
